--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,12 @@
       <div id="header">
         <nav>
           <ul>
-            <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+            <li class="fork"><a href="{{ site.github.repository_url }}">Bienvenue</a></li>
             {% if site.show_downloads %}
-              <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-              <li class="title">DOWNLOADS</li>
+              <li class="downloads"><a href="{{ site.github.zip_url }}">Services</a></li>
+              <li class="downloads"><a href="{{ site.github.tar_url }}">Projets</a></li>
+              <li class="downloads"><a href="{{ site.github.tar_url }}">CV</a></li>
+              <li class="downloads"><a href="{{ site.github.tar_url }}">Contacts</a></li>
             {% endif %}
           </ul>
         </nav>
