--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <div id="header">
         <nav>
           <ul>
-            <li class="fork"><a href="{{ site.github.repository_url }}">Bienvenue</a></li>
+            <li class="fork"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
             {% if site.show_downloads %}
               <li class="downloads"><a href="{{ site.github.zip_url }}">Services</a></li>
               <li class="downloads"><a href="{{ site.github.tar_url }}">Projets</a></li>
