--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,8 @@
       <div id="header">
         <nav>
           <ul>
-            <li class="fork"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
-            {% if site.show_downloads %}
-              <li class="downloads"><a href="{{ site.github.zip_url }}">Services</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">Projets</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">CV</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">Contacts</a></li>
-            {% endif %}
+            <li class="link"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
+            <li class="link"><a href="{{}}"></li>
           </ul>
         </nav>
       </div><!-- end header -->
