--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,9 @@
           <ul>
             <li class="link"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
             <li class="link"><a href="{{}}"></li>
+            <li class="link"><a href="{{}}"></li>
+            <li class="link"><a href="{{}}"></li>
+            <li class="link"><a href="{{}}"></li>
           </ul>
         </nav>
       </div><!-- end header -->
