--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,10 +22,10 @@
         <nav>
           <ul>
             <li class="link"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
-            <li class="link"><a href="{{}}"></li>
-            <li class="link"><a href="{{}}"></li>
-            <li class="link"><a href="{{}}"></li>
-            <li class="link"><a href="{{}}"></li>
+            <li class="link"><a href="{{}}">Services</li>
+            <li class="link"><a href="{{}}">Projets</li>
+            <li class="link"><a href="{{}}">CV</li>
+            <li class="link"><a href="{{}}">Contacts</li>
           </ul>
         </nav>
       </div><!-- end header -->
