--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
           <ul>
             <li class="link"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
             {% if site.show_downloads %}
-            <li class="link"><a href="{{ }}">Services</a></li>
+            <li class="link"><a href="{{ stsana/stsana.github.io/another-page.md }}">Services</a></li>
             <li class="link"><a href="{{  }}">Projets</a></li>
             <li class="link"><a href="{{  }}">CV</a></li>
             <li class="link"><a href="{{  }}">Contacts</a></li>
