--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
       <div id="header">
         <nav>
           <ul>
-            <li class="link"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
+            <li class="downloads"><a href="{{ stsana.github.io/ }}">Bienvenue</a></li>
             {% if site.show_downloads %}
-            <li class="downloads"><a href="{{ stsana/stsana.github.io/another-page.md }}">Services</a></li>
+            <li class="downloads"><a href="{{ stsana.github.io/another-page.md }}">Services</a></li>
             <li class="downloads"><a href="{{  }}">Projets</a></li>
             <li class="downloads"><a href="{{  }}">CV</a></li>
             <li class="downloads"><a href="{{  }}">Contacts</a></li>
