lien vers another-page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
             <li class="downloads"><a href="{{  }}">Contacts</a></li>
             <li class="downloads"><a href="{{  }}">CV</a></li>
             <li class="downloads"><a href="{{  }}">Projets</a></li>
-            <li class="downloads"><a href="{{ stsana.github.io/another-page }}">Services</a></li>
+            <li class="downloads"><a href="{{ stsana.github.io/blob/main/another-page.md }}">Services</a></li>
             
             
             {% endif %}
